data/forge_javadoc/1.10.2/processed/net_minecraft_client_gui_GuiClickableScrolledSelectionListProxy.md
# GuiClickableScrolledSelectionListProxy

## Class signature

```java
public class GuiClickableScrolledSelectionListProxy extends GuiSlot
```

## Constructors

- `public GuiClickableScrolledSelectionListProxy( RealmsClickableScrolledSelectionList selectionList, int p_i45526_2_, int p_i45526_3_, int p_i45526_4_, int p_i45526_5_, int p_i45526_6_)`

## Methods

- `protected int getSize()`
- `protected void elementClicked(int slotIndex, boolean isDoubleClick, int mouseX, int mouseY)`
- `protected boolean isSelected(int slotIndex)`
- `protected void drawBackground()`
- `protected void drawSlot(int entryID, int insideLeft, int yPos, int insideSlotHeight, int mouseXIn, int mouseYIn)`
- `public int width()`
- `public int mouseY()`
- `public int mouseX()`
- `protected int getContentHeight()`
- `protected int getScrollBarX()`
- `public void handleMouseInput()`
- `public void renderSelected(int p_178043_1_, int p_178043_2_, int p_178043_3_, Tezzelator p_178043_4_)`
- `protected void drawSelectionBox(int insideLeft, int insideTop, int mouseXIn, int mouseYIn)`