data/forge_javadoc/1.12.2/processed/net_minecraft_client_gui_GuiClickableScrolledSelectionListProxy.md
# GuiClickableScrolledSelectionListProxy

## Class signature

```java
public class GuiClickableScrolledSelectionListProxy extends GuiSlot
```

## Constructors

- `public GuiClickableScrolledSelectionListProxy( RealmsClickableScrolledSelectionList selectionList, int widthIn, int heightIn, int topIn, int bottomIn, int slotHeightIn)`

## Methods

- `protected int getSize()`
- `protected void elementClicked(int slotIndex, boolean isDoubleClick, int mouseX, int mouseY)`
- `protected boolean isSelected(int slotIndex)`
- `protected void drawBackground()`
- `protected void drawSlot(int slotIndex, int xPos, int yPos, int heightIn, int mouseXIn, int mouseYIn, float partialTicks)`
- `public int width()`
- `public int mouseY()`
- `public int mouseX()`
- `protected int getContentHeight()`
- `protected int getScrollBarX()`
- `public void handleMouseInput()`
- `public void renderSelected(int p_178043_1_, int p_178043_2_, int p_178043_3_, Tezzelator p_178043_4_)`
- `protected void drawSelectionBox(int insideLeft, int insideTop, int mouseXIn, int mouseYIn, float partialTicks)`